Bản chỉnh sửa để dùng với maven